bcs-app/backend/resources/templates/manifests/DaemonSet.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: deemonset-test
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
