bcs-app/backend/resources/templates/manifests/Endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: endpoints-test
  namespace: default
subsets:
  - addresses:
    - ip: 127.0.0.1
    ports:
    - port: 8080
      protocol: TCP
